--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <i class="bx bxs-quote-alt-left quote-icon"></i>
 
                         <div class="details">
-                            <span class="name">Agei-Twum Pius</span>
+                            <span class="name">Agyei-Twum Pius</span>
                             <span class="job">System Administrator & Developer</span>
                         </div>
                     </div>
